--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ certifi==2025.1.31
 click==8.1.8
 deprecation==2.1.0
 Flask==3.1.0
+flask-cors==5.0.1
 frozenlist==1.5.0
 gotrue==2.11.4
 h11==0.14.0
@@ -22,13 +23,16 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 multidict==6.1.0
+numpy==2.2.3
 packaging==24.2
+pandas==2.2.3
 postgrest==0.19.3
 propcache==0.3.0
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2025.1
 realtime==2.4.1
 six==1.17.0
 sniffio==1.3.1
@@ -37,6 +41,7 @@ StrEnum==0.4.15
 supabase==2.13.0
 supafunc==0.9.3
 typing_extensions==4.12.2
+tzdata==2025.1
 websockets==14.2
 Werkzeug==3.1.3
 yarl==1.18.3
