--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-table": "^8.21.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
