--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ packaging==24.2
 pandas==2.2.3
 postgrest==0.19.3
 propcache==0.3.0
+psycopg2==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
@@ -37,6 +38,7 @@ pytz==2025.1
 realtime==2.4.1
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.39
 storage3==0.11.3
 StrEnum==0.4.15
 supabase==2.13.0
