--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,26 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.13
 aiosignal==1.3.2
+alembic==1.15.1
 annotated-types==0.7.0
 anyio==4.8.0
+arabic-reshaper==3.0.0
 attrs==25.3.0
 blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.2
 deprecation==2.1.0
 Flask==3.1.0
 flask-cors==5.0.1
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
+google-auth==2.38.0
+google-genai==1.7.0
 gotrue==2.11.4
 gunicorn==23.0.0
 h11==0.14.0
@@ -22,20 +32,31 @@ hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 multidict==6.1.0
 numpy==2.2.3
 packaging==24.2
 pandas==2.2.3
+pdfminer.six==20231228
+pdfplumber==0.11.5
+pillow==11.1.0
 postgrest==0.19.3
 propcache==0.3.0
 psycopg2==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pypdfium2==4.30.1
+python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 realtime==2.4.1
+requests==2.32.3
+rsa==4.9
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.39
@@ -45,6 +66,7 @@ supabase==2.13.0
 supafunc==0.9.3
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 websockets==14.2
 Werkzeug==3.1.3
 yarl==1.18.3
