--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
 deprecation==2.1.0
+flasgger==0.9.7.1
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-Migrate==4.1.0
@@ -32,8 +33,11 @@ hyperframe==6.1.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 Mako==1.3.9
 MarkupSafe==3.0.2
+mistune==3.1.3
 multidict==6.1.0
 numpy==2.2.3
 packaging==24.2
@@ -54,8 +58,11 @@ python-bidi==0.6.6
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+PyYAML==6.0.2
 realtime==2.4.1
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.23.1
 rsa==4.9
 six==1.17.0
 sniffio==1.3.1
